[gd_scene load_steps=13 format=3 uid="uid://cliqk7lo4t8ao"]

[ext_resource type="Script" uid="uid://b1wqaworq8ys4" path="res://core/ui/card_ui/settings/plugin_settings_menu.gd" id="1_1p4dc"]
[ext_resource type="Script" uid="uid://ouqt2xo8inp2" path="res://core/systems/input/input_watcher.gd" id="2_5h71d"]
[ext_resource type="Resource" uid="uid://iqrotrmq62i6" path="res://assets/state/state_machines/settings_state_machine.tres" id="3_a1fhd"]
[ext_resource type="PackedScene" uid="uid://b76dvfuouhlwd" path="res://core/systems/state/state_updater.tscn" id="3_q7mwh"]
[ext_resource type="Resource" uid="uid://doxatxmp2mlty" path="res://assets/state/states/settings_plugins.tres" id="4_m0d4b"]
[ext_resource type="PackedScene" uid="uid://shvyhrv5sx3v" path="res://core/systems/state/state_watcher.tscn" id="5_ipise"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="6_fo0yk"]
[ext_resource type="Script" uid="uid://ohebcttenf0j" path="res://core/systems/input/focus_group_setter.gd" id="7_wmvad"]
[ext_resource type="PackedScene" uid="uid://dithv38oqgy58" path="res://core/ui/components/section_label.tscn" id="8_rs83g"]
[ext_resource type="PackedScene" uid="uid://o0equu1tyr4s" path="res://core/ui/components/expandable_card.tscn" id="8_veuxu"]
[ext_resource type="PackedScene" uid="uid://b0cyl6fdqxevn" path="res://core/systems/input/scroller_joystick.tscn" id="10_nbqrj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcwv0"]
resource_local_to_scene = true
bg_color = Color(0.105882, 0.109804, 0.141176, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="PluginSettingsMenu" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0
script = ExtResource("1_1p4dc")

[node name="InputWatcher" type="Node" parent="."]
script = ExtResource("2_5h71d")
stop_propagation = true
action = "ogui_east"

[node name="StateUpdater" parent="InputWatcher" instance=ExtResource("3_q7mwh")]
state_machine = ExtResource("3_a1fhd")
action = 2
on_signal = "input_released"

[node name="StateWatcher" parent="." instance=ExtResource("5_ipise")]
state = ExtResource("4_m0d4b")

[node name="FocusGroupSetter" type="Node" parent="StateWatcher" node_paths=PackedStringArray("target")]
script = ExtResource("7_wmvad")
target = NodePath("../../MarginContainer/ContentContainer/FocusGroup")
on_signal = "state_entered"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FocusGroup" parent="MarginContainer/ContentContainer" instance=ExtResource("6_fo0yk")]
unique_name_in_owner = true

[node name="NoPluginsLabel" parent="MarginContainer/ContentContainer" instance=ExtResource("8_rs83g")]
unique_name_in_owner = true
layout_mode = 2
text = "No plugins found"
horizontal_alignment = 1

[node name="ExpandableCard" parent="MarginContainer/ContentContainer" instance=ExtResource("8_veuxu")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xcwv0")

[node name="ScrollerJoystick" parent="." instance=ExtResource("10_nbqrj")]
